Modified styling elements for small cards in 'utilities.css' in 'Beginners Pad v2'.

--- a/BeginnersPad v2/view-listing-unit.html
+++ b/BeginnersPad v2/view-listing-unit.html
@@ -104,11 +104,11 @@
                 </div>
                 <div class="panel">
                     <div class="listing-units-list">
-                        <h3>Units available</h3>
+                        <h3>Other units available here</h3>
                         <div class="listing-units-grp">
-                            <div class="card-unit">
+                            <div class="card-sm card-unit">
                                 <a href="/view-listing-unit.html">
-                                    <div class="unit-details">
+                                    <div class="details">
                                         <h2>Unit title</h2>
                                         <div class="specs">
                                             <span class="spec">1 bed,</span>
@@ -129,9 +129,9 @@
                                 </a>  
                             </div>
                             
-                            <div class="card-unit">
+                            <div class="card-sm card-unit">
                                 <a href="/view-listing-unit.html">
-                                    <div class="unit-details">
+                                    <div class="details">
                                         <h2>Unit title</h2>
                                         <div class="specs">
                                             <span class="spec">1 bed,</span>
@@ -152,9 +152,9 @@
                                 </a>  
                             </div>
                             
-                            <div class="card-unit">
+                            <div class="card-sm card-unit">
                                 <a href="/view-listing-unit.html">
-                                    <div class="unit-details">
+                                    <div class="details">
                                         <h2>Unit title</h2>
                                         <div class="specs">
                                             <span class="spec">1 bed,</span>
@@ -179,28 +179,33 @@
                     <div class="listing-units-list">
                         <h2>Property</h2>
                         <div class="listing-units-grp">
-                            <div class="card-unit">
+                            <div class="card-sm card-2">
                                 <a href="/view-listing.html">
                                     <div class="thumb"></div>
-                                    <div class="unit-details">
+                                    <div class="details">
                                         <h2>Unit title</h2>
-                                        <div class="specs">
-                                            <span class="spec">1 bed,</span>
-                                            <span class="spec">2 bath,</span>
-                                            <span class="spec">40sq M</span>
-                                        </div>
-                                        <div class="deposit">
-                                            <span class="label">Initial deposit:</span>
-                                            <span class="data">not required</span>
-                                        </div>
-                                        <div class="price">
-                                            <span class="label">KES</span>
-                                            <span class="data">0.00</span>
+                                        <div class="location">
+                                            <span class="spec">Location,</span>
+                                            <span class="spec">Location,</span>
+                                            <span class="spec">Location</span>
                                         </div>
                                         <p class="timestamp">Added 5 hours ago</p>
+                                        <div class="info-rating-grp">
+                                            <p class="rating">Rating: 4.0/5</p>
+                                            <div class="stars">
+                                                <i class="fas fa-star"></i>
+                                                <i class="fas fa-star"></i>
+                                                <i class="fas fa-star"></i>
+                                                <i class="fas fa-star"></i>
+                                                <i class="far fa-star"></i>
+                                            </div>
+                                        </div>
                                     </div>
                                 </a>  
                             </div>
+                        </div>
+                        <div class="section-more">
+                            <a href="#">View lister profile <i class="fas fa-chevron-right"></i></a>
                         </div>
                     </div>
                 </div>
