Added styling for 'Apply' section of 'view-listing-unit.html' in 'Beginners Pad v2'.

--- a/BeginnersPad v2/help.html
+++ b/BeginnersPad v2/help.html
@@ -118,7 +118,7 @@
                         <label for="description">Text (describe problem in detail)*</label>
                         <textarea name="description" id="description" cols="30" rows="10"></textarea>
                     </div>
-                    <input class="btn-submit" type="button" value="Submit">
+                    <input class="btn btn-link btn-submit" type="button" value="Submit">
                 </form>
             </div>
         </div>
