Corrected some errors in 'Beginners Pad v2'.

--- a/BeginnersPad v2/sign-up.html
+++ b/BeginnersPad v2/sign-up.html
@@ -82,7 +82,7 @@
                             </p>
                         </div>
                     </div>
-                    <input class="btn-submit" type="button" value="Sign up">
+                    <input class="btn btn-submit" type="button" value="Sign up">
                 </form>
             </div>
         </div>
