Added 'view-listing-reviews.html' to 'Beginners Pad v2'.

--- a/BeginnersPad v2/view-listing.html
+++ b/BeginnersPad v2/view-listing.html
@@ -397,7 +397,7 @@
                             </div>
                         </div>
                         <div class="section-more">
-                            <a href="#">View more reviews <i class="fas fa-chevron-right"></i></a>
+                            <a href="/view-listing-reviews.html">View more reviews <i class="fas fa-chevron-right"></i></a>
                         </div>
                     </div>
                 </div>
