Added HTML structure to 'view-listing-reviews.html' in 'Beginners Pad v2'.

--- a/BeginnersPad v2/index.html
+++ b/BeginnersPad v2/index.html
@@ -39,7 +39,7 @@
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cum ex corporis aut porro vitae nam iusto neque est?
                         Dolores distinctio nam cupiditate veniam enim! Magnam quae delectus expedita tempore eaque!
                     </p>
-                    <a href="#" class="btn-link">Learn more</a>
+                    <a href="#" class="btn btn-link">Learn more</a>
                 </div>
             </div>
         </div>
