--- a/BeginnersPad v2/view-listing-unit.html
+++ b/BeginnersPad v2/view-listing-unit.html
@@ -183,7 +183,7 @@
                                 <a href="/view-listing.html">
                                     <div class="thumb"></div>
                                     <div class="details">
-                                        <h2>Listing title</h2>
+                                        <h2>Listing name</h2>
                                         <div class="location">
                                             <span class="spec">Location,</span>
                                             <span class="spec">Location,</span>
