Added styling for '.section-listing-reviews' and renamed references of '.listing-info-header' to '.section-listing-info-header' in 'view-listing-reviews.html' and 'style.css' in 'Beginners Pad v2'.

--- a/BeginnersPad v2/view-listing-reviews.html
+++ b/BeginnersPad v2/view-listing-reviews.html
@@ -30,7 +30,7 @@
         </ul>
     </nav>
 
-    <section class="listing-info-header">
+    <section class="section-listing-info-header">
         <div class="container">
             <div class="header-grp">
                 <div class="thumb"></div>
@@ -53,7 +53,7 @@
                         </div>
                     </div>
                     <div class="section-more">
-                        <a href="#"><i class="fas fa-chevron-left"></i> View listing</a>
+                        <a href="/view-listing.html"><i class="fas fa-chevron-left"></i> View listing</a>
                     </div>
                 </div>
             </div>
