--- a/BeginnersPad v2/help.html
+++ b/BeginnersPad v2/help.html
@@ -61,7 +61,7 @@
                             <a href="#">See more <i class="fas fa-chevron-right"></i></a>
                     </div>
                     <div class="section-more">
-                        <a href="#">View all FAQs <i class="fas fa-chevron-right"></i></a>
+                        <a href="/view-faqs.html">View all FAQs <i class="fas fa-chevron-right"></i></a>
                     </div>
                 </div>
                 <div class="help-topics">
@@ -91,7 +91,7 @@
                         <a href="#">See more <i class="fas fa-chevron-right"></i></a>
                     </div>
                     <div class="section-more">
-                        <a href="#">View all Help topics <i class="fas fa-chevron-right"></i></a>
+                        <a href="/view-help-topics.html">View all Help topics <i class="fas fa-chevron-right"></i></a>
                     </div>
                 </div>
             </div>
