Added HTML structure and styling for 'view-help-topics.html' in 'Beginners Pad v2'.

--- a/BeginnersPad v2/help.html
+++ b/BeginnersPad v2/help.html
@@ -67,7 +67,7 @@
                 <div class="help-topics">
                     <h3 class="section-title">Help topics</h3>
                     <div class="link-item">
-                        <h4>Listing property - Get started</h4>
+                        <h4>Listing a property - Get started</h4>
                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum consequatur at iure. Soluta consequatur, earum
                             voluptates debitis neque similique id voluptatibus natus? Eaque tenetur laborum exercitationem, minus libero,
                             repellendus rem tempore explicabo voluptate corrupti totam. Quo id provident ullam dolorem nostrum corporis ipsa
