Renamed 'view-help-topics.html' to 'view-topics.html' in 'Beginners Pad v2'.

--- a/BeginnersPad v2/view-topics.html
+++ b/BeginnersPad v2/view-topics.html
@@ -33,7 +33,7 @@
     <section class="section-topics">
         <div class="container">
             <div class="topics">
-                <h3 class="section-title">Help topics</h3>
+                <h3 class="section-title">Topics</h3>
                 <div class="item">
                     <h4>Listing a property - Get started</h4>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Non ipsam impedit ut, harum dicta molestiae laudantium et
