Fixed a missing link error in 'help.html' in 'Beginners Pad v2'.

--- a/BeginnersPad v2/help.html
+++ b/BeginnersPad v2/help.html
@@ -91,7 +91,7 @@
                         <a href="#">See more <i class="fas fa-chevron-right"></i></a>
                     </div>
                     <div class="section-more">
-                        <a href="/view-help-topics.html">View all Help topics <i class="fas fa-chevron-right"></i></a>
+                        <a href="/view-topics.html">View all Help topics <i class="fas fa-chevron-right"></i></a>
                     </div>
                 </div>
             </div>
