Added search bar to 'view-listings.html' in 'Beginners Pad v2'.

--- a/BeginnersPad v2/view-listings.html
+++ b/BeginnersPad v2/view-listings.html
@@ -44,6 +44,14 @@
     <!-- Listings -->
     <section id="listings">
         <div class="container">
+            <form class="search-bar">
+                <div class="search-bar-grp">
+                    <input type="text" class="search-input" placeholder="search...">
+                    <div class="search-button">
+                        <i class="fas fa-search"></i>
+                    </div>
+                </div>
+            </form>
             <div class="container-btn-dropdown">
                 <select class="btn-dropdown" name="listing_sort" id="listing_sort">
                     <option value="" selected>Sort by newest</option>
