Renamed references of '#listing' to '#section-listing' in 'Beginners Pad v2'.

--- a/BeginnersPad v2/index.html
+++ b/BeginnersPad v2/index.html
@@ -46,7 +46,7 @@
     </section>
 
     <!-- Listings -->
-    <section id="listings">
+    <section id="section-listings">
         <div class="container">
             <h3 class="section-title">Newest listings</h3>
             <div class="cards">
