--- a/BeginnersPad v2/view-listings.html
+++ b/BeginnersPad v2/view-listings.html
@@ -42,7 +42,7 @@
     </section>
 
     <!-- Listings -->
-    <section id="listings">
+    <section id="section-listings">
         <div class="container">
             <form class="search-bar">
                 <div class="search-bar-grp">
