Added search bar to 'view-topics.html' in 'Beginners Pad v2'.

--- a/BeginnersPad v2/view-topics.html
+++ b/BeginnersPad v2/view-topics.html
@@ -34,6 +34,14 @@
         <div class="container">
             <div class="topics">
                 <h3 class="section-title">Topics</h3>
+                <form class="search-bar">
+                    <div class="search-bar-grp">
+                        <input type="text" class="search-input" placeholder="search...">
+                        <div class="search-button">
+                            <i class="fas fa-search"></i>
+                        </div>
+                    </div>
+                </form>
                 <div class="item">
                     <h4>Listing a property - Get started</h4>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Non ipsam impedit ut, harum dicta molestiae laudantium et
