Added 'search-bar-scroll.js' to 'Beginners Pad v2'.

--- a/BeginnersPad v2/index.html
+++ b/BeginnersPad v2/index.html
@@ -185,7 +185,7 @@
         <div class="others">
             <a href="#">Privacy policy</a>
             <a href="#">Terms of service</a>
-            <a href="#">Topics/articles</a>
+            <a href="/view-topics.html">Topics/articles</a>
         </div>
     </section>
     
