--- a/BeginnersPad v2/view-listings.html
+++ b/BeginnersPad v2/view-listings.html
@@ -44,7 +44,7 @@
     <!-- Listings -->
     <section id="section-listings">
         <div class="container">
-            <form class="search-bar">
+            <form class="search-bar sticky">
                 <div class="search-bar-grp">
                     <input type="text" class="search-input" placeholder="search...">
                     <div class="search-button">
