Added sticky effect to search bar on scroll in 'Beginners Pad v2'.

--- a/BeginnersPad v2/view-listings.html
+++ b/BeginnersPad v2/view-listings.html
@@ -41,10 +41,14 @@
         </div>
     </section>
 
-    <!-- Listings -->
-    <section id="section-listings">
+    <section class="section-blank">
+        
+    </section>
+
+    <!-- Search bar -->
+    <section id="search-bar">
         <div class="container">
-            <form class="search-bar sticky">
+            <form class="search-bar">
                 <div class="search-bar-grp">
                     <input type="text" class="search-input" placeholder="search...">
                     <div class="search-button">
@@ -52,6 +56,12 @@
                     </div>
                 </div>
             </form>
+        </div>
+    </section>
+
+    <!-- Listings -->
+    <section id="section-listings">
+        <div class="container">
             <div class="container-btn-dropdown">
                 <select class="btn-dropdown" name="listing_sort" id="listing_sort">
                     <option value="" selected>Sort by newest</option>
@@ -250,5 +260,7 @@
     <footer>
         <p>&copy; 2021 Beginners Pad</p>
     </footer>
+
+    <script src="js/search-bar-scroll.js"></script>
 </body>
 </html>
