--- a/BeginnersPad v2/view-topics.html
+++ b/BeginnersPad v2/view-topics.html
@@ -30,18 +30,25 @@
         </ul>
     </nav>
 
+    <h3 class="section-title">Topics</h3>
+
+    <!-- Search bar -->
+    <section id="search-bar">
+        <div class="container">
+            <form class="search-bar">
+                <div class="search-bar-grp">
+                    <input type="text" class="search-input" placeholder="search...">
+                    <div class="search-button">
+                        <i class="fas fa-search"></i>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </section>
+
     <section class="section-topics">
         <div class="container">
             <div class="topics">
-                <h3 class="section-title">Topics</h3>
-                <form class="search-bar">
-                    <div class="search-bar-grp">
-                        <input type="text" class="search-input" placeholder="search...">
-                        <div class="search-button">
-                            <i class="fas fa-search"></i>
-                        </div>
-                    </div>
-                </form>
                 <div class="item">
                     <h4>Listing a property - Get started</h4>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Non ipsam impedit ut, harum dicta molestiae laudantium et
@@ -116,5 +123,6 @@
     <footer>
         <p>&copy; 2021 Beginners Pad</p>
     </footer>
+    <script src="js/search-bar-scroll.js"></script>
 </body>
 </html>
