Added 'view-tickets-user.html' and 'view-tickets-admin.html' to 'Beginners Pad v2'.

--- a/BeginnersPad v2/help.html
+++ b/BeginnersPad v2/help.html
@@ -120,6 +120,12 @@
                     </div>
                     <input class="btn btn-link btn-submit" type="button" value="Submit">
                 </form>
+                <div class="section-more">
+                    <a href="/view-tickets-user.html">Sample tickets as user <i class="fas fa-chevron-right"></i></a>
+                </div>
+                <div class="section-more">
+                    <a href="/view-tickets-admin.html">Sample tickets as admin <i class="fas fa-chevron-right"></i></a>
+                </div>
             </div>
         </div>
     </section>
