Renamed references of '.section-topics' to '.section-read-links' in 'Beginners Pad v2'.

--- a/BeginnersPad v2/view-faqs.html
+++ b/BeginnersPad v2/view-faqs.html
@@ -17,7 +17,7 @@
         <ul class="nav-menu">
             <div class="badge">
                 <span class="badge-mark"></span>
-                <li class="selected"><a href="help.html"><i class="fas fa-question-circle"></i> Help</a></li>
+                <li><a href="help.html"><i class="fas fa-question-circle"></i> Help</a></li>
             </div>
             <div class="badge">
                 <span class="badge-mark"></span>
