--- a/BeginnersPad v2/view-topics.html
+++ b/BeginnersPad v2/view-topics.html
@@ -17,7 +17,7 @@
         <ul class="nav-menu">
             <div class="badge">
                 <span class="badge-mark"></span>
-                <li class="selected"><a href="help.html"><i class="fas fa-question-circle"></i> Help</a></li>
+                <li><a href="help.html"><i class="fas fa-question-circle"></i> Help</a></li>
             </div>
             <div class="badge">
                 <span class="badge-mark"></span>
@@ -46,9 +46,9 @@
         </div>
     </section>
 
-    <section class="section-topics">
+    <section class="section-read-links">
         <div class="container">
-            <div class="topics">
+            <div class="list">
                 <div class="item">
                     <h4>Listing a property - Get started</h4>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Non ipsam impedit ut, harum dicta molestiae laudantium et
