Added styling to 'view-tickets-user.html' in 'Beginners Pad v2'.

--- a/BeginnersPad v2/view-tickets-user.html
+++ b/BeginnersPad v2/view-tickets-user.html
@@ -33,7 +33,7 @@
     <section class="section-read-links">
         <div class="container">
             <div class="list">
-                <div class="item">
+                <div class="item item-bottom-border">
                     <h4>Ticket #0</h4>
                     <h5>Issued on 01-01-2021 00:00:00</h5>
                     <h5>Priority: 5 (highest)</h5>
@@ -48,7 +48,7 @@
                     voluptates fuga amet quia blanditiis numquam. Dolores fugit atque at!</p>
                     <a href="#">View ticket <i class="fas fa-chevron-right"></i></a>
                 </div>
-                <div class="item">
+                <div class="item item-bottom-border">
                     <h4>Ticket #0</h4>
                     <h5>Issued on 01-01-2021 00:00:00</h5>
                     <h5>Priority: 5 (highest)</h5>
@@ -63,7 +63,7 @@
                     voluptates fuga amet quia blanditiis numquam. Dolores fugit atque at!</p>
                     <a href="#">View ticket <i class="fas fa-chevron-right"></i></a>
                 </div>
-                <div class="item">
+                <div class="item item-bottom-border">
                     <h4>Ticket #0</h4>
                     <h5>Issued on 01-01-2021 00:00:00</h5>
                     <h5>Priority: 5 (highest)</h5>
@@ -78,7 +78,7 @@
                     voluptates fuga amet quia blanditiis numquam. Dolores fugit atque at!</p>
                     <a href="#">View ticket <i class="fas fa-chevron-right"></i></a>
                 </div>
-                <div class="item">
+                <div class="item item-bottom-border">
                     <h4>Ticket #0</h4>
                     <h5>Issued on 01-01-2021 00:00:00</h5>
                     <h5>Priority: 5 (highest)</h5>
