Added 'status' tags to 'view-tickets-user.html' in 'Beginners Pad v2'.

--- a/BeginnersPad v2/view-tickets-user.html
+++ b/BeginnersPad v2/view-tickets-user.html
@@ -38,6 +38,7 @@
                     <h5>Issued on 01-01-2021 00:00:00</h5>
                     <h5>Priority: 5 (highest)</h5>
                     <h5>Assigned to: not assigned</h5>
+                    <h5>Status: pending</h5>
                     <h3 class="title-main">Unable to sign in</h3>
                     <p class="text-main">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Non ipsam impedit ut, harum dicta molestiae laudantium et
                     totam doloribus molestias cum ducimus fuga. Sunt natus, iste consequuntur eaque officiis ad omnis voluptatem quasi,
@@ -53,6 +54,7 @@
                     <h5>Issued on 01-01-2021 00:00:00</h5>
                     <h5>Priority: 5 (highest)</h5>
                     <h5>Assigned to: not assigned</h5>
+                    <h5>Status: pending</h5>
                     <h3 class="title-main">Unable to sign in</h3>
                     <p class="text-main">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Non ipsam impedit ut, harum dicta molestiae laudantium et
                     totam doloribus molestias cum ducimus fuga. Sunt natus, iste consequuntur eaque officiis ad omnis voluptatem quasi,
@@ -68,6 +70,7 @@
                     <h5>Issued on 01-01-2021 00:00:00</h5>
                     <h5>Priority: 5 (highest)</h5>
                     <h5>Assigned to: not assigned</h5>
+                    <h5>Status: pending</h5>
                     <h3 class="title-main">Unable to sign in</h3>
                     <p class="text-main">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Non ipsam impedit ut, harum dicta molestiae laudantium et
                     totam doloribus molestias cum ducimus fuga. Sunt natus, iste consequuntur eaque officiis ad omnis voluptatem quasi,
@@ -83,6 +86,7 @@
                     <h5>Issued on 01-01-2021 00:00:00</h5>
                     <h5>Priority: 5 (highest)</h5>
                     <h5>Assigned to: not assigned</h5>
+                    <h5>Status: pending</h5>
                     <h3 class="title-main">Unable to sign in</h3>
                     <p class="text-main">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Non ipsam impedit ut, harum dicta molestiae laudantium et
                     totam doloribus molestias cum ducimus fuga. Sunt natus, iste consequuntur eaque officiis ad omnis voluptatem quasi,
