Modified HTML structure in 'view-tickets-user.html' to create a grid view for the list of tickets and their controls in 'Beginners Pad v2'.

--- a/BeginnersPad v2/view-tickets-user.html
+++ b/BeginnersPad v2/view-tickets-user.html
@@ -30,72 +30,82 @@
         </ul>
     </nav>
 
-    <section class="section-read-links">
-        <div class="container">
-            <div class="list">
-                <div class="item item-bottom-border">
-                    <h4>Ticket #0</h4>
-                    <h5>Issued on 01-01-2021 00:00:00</h5>
-                    <h5>Priority: 5 (highest)</h5>
-                    <h5>Assigned to: not assigned</h5>
-                    <h5>Status: pending</h5>
-                    <h3 class="title-main">Unable to sign in</h3>
-                    <p class="text-main">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Non ipsam impedit ut, harum dicta molestiae laudantium et
-                    totam doloribus molestias cum ducimus fuga. Sunt natus, iste consequuntur eaque officiis ad omnis voluptatem quasi,
-                    consequatur repudiandae similique, quis nemo eius. Reiciendis voluptates error numquam ipsam adipisci perferendis libero
-                    aspernatur excepturi eligendi beatae blanditiis asperiores earum, repellendus, sunt voluptatem illo corrupti praesentium
-                    debitis architecto autem unde, eaque enim fugit deleniti. Nobis repellendus aliquid perspiciatis, dolorum facilis earum
-                    asperiores quo rerum, quisquam rem facere quos voluptas consequuntur unde ipsum exercitationem ad! Ab delectus
-                    voluptates fuga amet quia blanditiis numquam. Dolores fugit atque at!</p>
-                    <a href="#">View ticket <i class="fas fa-chevron-right"></i></a>
-                </div>
-                <div class="item item-bottom-border">
-                    <h4>Ticket #0</h4>
-                    <h5>Issued on 01-01-2021 00:00:00</h5>
-                    <h5>Priority: 5 (highest)</h5>
-                    <h5>Assigned to: not assigned</h5>
-                    <h5>Status: pending</h5>
-                    <h3 class="title-main">Unable to sign in</h3>
-                    <p class="text-main">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Non ipsam impedit ut, harum dicta molestiae laudantium et
-                    totam doloribus molestias cum ducimus fuga. Sunt natus, iste consequuntur eaque officiis ad omnis voluptatem quasi,
-                    consequatur repudiandae similique, quis nemo eius. Reiciendis voluptates error numquam ipsam adipisci perferendis libero
-                    aspernatur excepturi eligendi beatae blanditiis asperiores earum, repellendus, sunt voluptatem illo corrupti praesentium
-                    debitis architecto autem unde, eaque enim fugit deleniti. Nobis repellendus aliquid perspiciatis, dolorum facilis earum
-                    asperiores quo rerum, quisquam rem facere quos voluptas consequuntur unde ipsum exercitationem ad! Ab delectus
-                    voluptates fuga amet quia blanditiis numquam. Dolores fugit atque at!</p>
-                    <a href="#">View ticket <i class="fas fa-chevron-right"></i></a>
-                </div>
-                <div class="item item-bottom-border">
-                    <h4>Ticket #0</h4>
-                    <h5>Issued on 01-01-2021 00:00:00</h5>
-                    <h5>Priority: 5 (highest)</h5>
-                    <h5>Assigned to: not assigned</h5>
-                    <h5>Status: pending</h5>
-                    <h3 class="title-main">Unable to sign in</h3>
-                    <p class="text-main">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Non ipsam impedit ut, harum dicta molestiae laudantium et
-                    totam doloribus molestias cum ducimus fuga. Sunt natus, iste consequuntur eaque officiis ad omnis voluptatem quasi,
-                    consequatur repudiandae similique, quis nemo eius. Reiciendis voluptates error numquam ipsam adipisci perferendis libero
-                    aspernatur excepturi eligendi beatae blanditiis asperiores earum, repellendus, sunt voluptatem illo corrupti praesentium
-                    debitis architecto autem unde, eaque enim fugit deleniti. Nobis repellendus aliquid perspiciatis, dolorum facilis earum
-                    asperiores quo rerum, quisquam rem facere quos voluptas consequuntur unde ipsum exercitationem ad! Ab delectus
-                    voluptates fuga amet quia blanditiis numquam. Dolores fugit atque at!</p>
-                    <a href="#">View ticket <i class="fas fa-chevron-right"></i></a>
-                </div>
-                <div class="item item-bottom-border">
-                    <h4>Ticket #0</h4>
-                    <h5>Issued on 01-01-2021 00:00:00</h5>
-                    <h5>Priority: 5 (highest)</h5>
-                    <h5>Assigned to: not assigned</h5>
-                    <h5>Status: pending</h5>
-                    <h3 class="title-main">Unable to sign in</h3>
-                    <p class="text-main">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Non ipsam impedit ut, harum dicta molestiae laudantium et
-                    totam doloribus molestias cum ducimus fuga. Sunt natus, iste consequuntur eaque officiis ad omnis voluptatem quasi,
-                    consequatur repudiandae similique, quis nemo eius. Reiciendis voluptates error numquam ipsam adipisci perferendis libero
-                    aspernatur excepturi eligendi beatae blanditiis asperiores earum, repellendus, sunt voluptatem illo corrupti praesentium
-                    debitis architecto autem unde, eaque enim fugit deleniti. Nobis repellendus aliquid perspiciatis, dolorum facilis earum
-                    asperiores quo rerum, quisquam rem facere quos voluptas consequuntur unde ipsum exercitationem ad! Ab delectus
-                    voluptates fuga amet quia blanditiis numquam. Dolores fugit atque at!</p>
-                    <a href="#">View ticket <i class="fas fa-chevron-right"></i></a>
+    <section>
+        <div class="section-read-links">
+            <div class="container">
+                <h3 class="section-title">Tickets</h3>
+                <div class="panel-grp">
+                    <div class="panel">
+                        <div class="list">
+                            <div class="item item-bottom-border">
+                                <h4>Ticket #0</h4>
+                                <h5>Issued on 01-01-2021 00:00:00</h5>
+                                <h5>Priority: 5 (highest)</h5>
+                                <h5>Assigned to: not assigned</h5>
+                                <h5>Status: pending</h5>
+                                <h3 class="title-main">Unable to sign in</h3>
+                                <p class="text-main">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Non ipsam impedit ut, harum dicta molestiae laudantium et
+                                totam doloribus molestias cum ducimus fuga. Sunt natus, iste consequuntur eaque officiis ad omnis voluptatem quasi,
+                                consequatur repudiandae similique, quis nemo eius. Reiciendis voluptates error numquam ipsam adipisci perferendis libero
+                                aspernatur excepturi eligendi beatae blanditiis asperiores earum, repellendus, sunt voluptatem illo corrupti praesentium
+                                debitis architecto autem unde, eaque enim fugit deleniti. Nobis repellendus aliquid perspiciatis, dolorum facilis earum
+                                asperiores quo rerum, quisquam rem facere quos voluptas consequuntur unde ipsum exercitationem ad! Ab delectus
+                                voluptates fuga amet quia blanditiis numquam. Dolores fugit atque at!</p>
+                                <a href="#">View ticket <i class="fas fa-chevron-right"></i></a>
+                            </div>
+                            <div class="item item-bottom-border">
+                                <h4>Ticket #0</h4>
+                                <h5>Issued on 01-01-2021 00:00:00</h5>
+                                <h5>Priority: 5 (highest)</h5>
+                                <h5>Assigned to: not assigned</h5>
+                                <h5>Status: pending</h5>
+                                <h3 class="title-main">Unable to sign in</h3>
+                                <p class="text-main">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Non ipsam impedit ut, harum dicta molestiae laudantium et
+                                totam doloribus molestias cum ducimus fuga. Sunt natus, iste consequuntur eaque officiis ad omnis voluptatem quasi,
+                                consequatur repudiandae similique, quis nemo eius. Reiciendis voluptates error numquam ipsam adipisci perferendis libero
+                                aspernatur excepturi eligendi beatae blanditiis asperiores earum, repellendus, sunt voluptatem illo corrupti praesentium
+                                debitis architecto autem unde, eaque enim fugit deleniti. Nobis repellendus aliquid perspiciatis, dolorum facilis earum
+                                asperiores quo rerum, quisquam rem facere quos voluptas consequuntur unde ipsum exercitationem ad! Ab delectus
+                                voluptates fuga amet quia blanditiis numquam. Dolores fugit atque at!</p>
+                                <a href="#">View ticket <i class="fas fa-chevron-right"></i></a>
+                            </div>
+                            <div class="item item-bottom-border">
+                                <h4>Ticket #0</h4>
+                                <h5>Issued on 01-01-2021 00:00:00</h5>
+                                <h5>Priority: 5 (highest)</h5>
+                                <h5>Assigned to: not assigned</h5>
+                                <h5>Status: pending</h5>
+                                <h3 class="title-main">Unable to sign in</h3>
+                                <p class="text-main">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Non ipsam impedit ut, harum dicta molestiae laudantium et
+                                totam doloribus molestias cum ducimus fuga. Sunt natus, iste consequuntur eaque officiis ad omnis voluptatem quasi,
+                                consequatur repudiandae similique, quis nemo eius. Reiciendis voluptates error numquam ipsam adipisci perferendis libero
+                                aspernatur excepturi eligendi beatae blanditiis asperiores earum, repellendus, sunt voluptatem illo corrupti praesentium
+                                debitis architecto autem unde, eaque enim fugit deleniti. Nobis repellendus aliquid perspiciatis, dolorum facilis earum
+                                asperiores quo rerum, quisquam rem facere quos voluptas consequuntur unde ipsum exercitationem ad! Ab delectus
+                                voluptates fuga amet quia blanditiis numquam. Dolores fugit atque at!</p>
+                                <a href="#">View ticket <i class="fas fa-chevron-right"></i></a>
+                            </div>
+                            <div class="item item-bottom-border">
+                                <h4>Ticket #0</h4>
+                                <h5>Issued on 01-01-2021 00:00:00</h5>
+                                <h5>Priority: 5 (highest)</h5>
+                                <h5>Assigned to: not assigned</h5>
+                                <h5>Status: pending</h5>
+                                <h3 class="title-main">Unable to sign in</h3>
+                                <p class="text-main">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Non ipsam impedit ut, harum dicta molestiae laudantium et
+                                totam doloribus molestias cum ducimus fuga. Sunt natus, iste consequuntur eaque officiis ad omnis voluptatem quasi,
+                                consequatur repudiandae similique, quis nemo eius. Reiciendis voluptates error numquam ipsam adipisci perferendis libero
+                                aspernatur excepturi eligendi beatae blanditiis asperiores earum, repellendus, sunt voluptatem illo corrupti praesentium
+                                debitis architecto autem unde, eaque enim fugit deleniti. Nobis repellendus aliquid perspiciatis, dolorum facilis earum
+                                asperiores quo rerum, quisquam rem facere quos voluptas consequuntur unde ipsum exercitationem ad! Ab delectus
+                                voluptates fuga amet quia blanditiis numquam. Dolores fugit atque at!</p>
+                                <a href="#">View ticket <i class="fas fa-chevron-right"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="panel">
+                        
+                    </div>
                 </div>
             </div>
         </div>
