--- a/BeginnersPad v2/view-listings.html
+++ b/BeginnersPad v2/view-listings.html
@@ -60,7 +60,7 @@
     </section>
 
     <!-- Listings -->
-    <section id="section-listings">
+    <section class="section-listings">
         <div class="container">
             <div class="container-btn-dropdown">
                 <select class="btn-dropdown" name="listing_sort" id="listing_sort">
